--- a/react/src/components/home/About.css
+++ b/react/src/components/home/About.css
@@ -1,11 +1,49 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap');
 
-.desc {
+body {
     font-family: 'Poppins', sans-serif;
+    margin: 2em;
+    color: #3d3d3d;
+    --mdc-theme-primary: #007f8b;
+    --mdc-theme-on-primary: #f1f3f4;
 }
 
 .title {
-    font-family: 'Poppins', sans-serif;
     font-weight: bold;
     color: rgba(0, 99, 178, 1);
+}
+
+video {
+    clear: both;
+    display: block;
+    transform: rotateY(180deg);
+    -webkit-transform: rotateY(180deg);
+    -moz-transform: rotateY(180deg);
+}
+
+.canvas {
+    z-index: 1;
+    position: absolute;
+    pointer-events: none;
+}
+
+.output_canvas {
+    transform: rotateY(180deg);
+    -webkit-transform: rotateY(180deg);
+    -moz-transform: rotateY(180deg);
+}
+
+.highlighter {
+    background: rgba(0, 255, 0, 0.25);
+    border: 1px dashed #fff;
+    z-index: 1;
+    position: absolute;
+}
+
+.removed {
+    display: none;
+}
+
+.invisible {
+    opacity: 0.2;
 }
